                <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

      <LinearLayout  
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/header"
            android:textSize="25dp" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="3dp"
            android:text="@string/uses3" />

                <TextView
                    android:id="@+id/textView3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="10dp"
                    android:text="@string/item1" />
 
         <TextView
             android:id="@+id/textView4"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:paddingLeft="10dp"
             android:text="@string/item2" />
         
         <TextView
             android:id="@+id/textView5"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:paddingLeft="10dp"
             android:text="@string/item3" />

         <TextView
             android:id="@+id/textView6"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:paddingTop="10dp"
             android:text="@string/add_sms_title"
             android:textSize="20dp" />
         
		<TextView
		    android:id="@+id/textView7"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:paddingBottom="5dp"
		    android:paddingLeft="5dp"
		    android:text="@string/add_sms_instruct_1" />
                  
		<TextView
		    android:id="@+id/textView8"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:paddingLeft="5dp"
		    android:text="@string/add_sms_instruct_2" />
		
		<TextView
             android:id="@+id/textView9"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:paddingTop="10dp"
             android:text="@string/add_dialpad_title"
             android:textSize="20dp" />

		<TextView
		    android:id="@+id/textView10"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:paddingBottom="5dp"
		    android:paddingLeft="5dp"
		    android:text="@string/add_dp_instruct_1" />

		<TextView
		    android:id="@+id/textView11"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:paddingLeft="5dp"
		    android:text="@string/add_dp_instruct_2" />

		<TextView
		    android:id="@+id/textView12"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:paddingTop="10dp"
		    android:text="@string/recent_cont_title"
		    android:textSize="20dp" />

		<TextView
		    android:id="@+id/textView13"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:paddingLeft="5dp"
		    android:text="@string/recent_cont_instruct_1" />
		
    </LinearLayout>
    </ScrollView>

